--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ web-sys = { version = "0.3", features = [
   'WebGlShader',
 ] }
 
+web-time = "1.1"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.34"
